tests/error/array_type_match.gw
#! [contains] array types do not match
[1,2,3,4] => var Object[1] k;
